[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scripts/Dynamite.gd" type="Script" id=1]
[ext_resource path="res://Art/Dynamite.png" type="Texture" id=2]
[ext_resource path="res://Scenes/DustParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://SampleLibrary.tres" type="SampleLibrary" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -20.5804, -20.1782, 26.5134, -6.09412, 24.7528, 9.7505, 12.4292, 21.634, -26.3021, -0.372456, -29.383, -14.4566 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 155.465

[sub_resource type="ColorRamp" id=3]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 0.984314, 0.313726, 0.313726, 1, 0.984314, 0.313726, 0.313726, 0 )

[node name="Dynamite" type="RigidBody2D" groups=[ "Bombs" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 63
collision/mask = 63
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 5.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( -20.5804, -20.1782, 26.5134, -6.09412, 24.7528, 9.7505, 12.4292, 21.634, -26.3021, -0.372456, -29.383, -14.4566 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="BlastRadius" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 63
collision/mask = 63

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlastRadius"]

shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[node name="DustParticles" parent="." instance=ExtResource( 3 )]

config/amount = 140
config/explosiveness = 0.01
params/spread = 180.0
params/linear_velocity = -150.0
params/spin_velocity = 10.0
params/tangential_accel = 50.0
params/initial_size = 0.2
params/final_size = 1.0
randomness/linear_velocity = 1.0
randomness/spin_velocity = 0.3
randomness/initial_size = 0.3
randomness/final_size = 0.3
randomness/hue_variation = 0.3

[node name="FireParticles" parent="." instance=ExtResource( 3 )]

visibility/blend_mode = 1
config/amount = 140
config/lifetime = 0.6
config/time_scale = 3.0
config/explosiveness = 0.01
params/spread = 180.0
params/linear_velocity = -150.0
params/spin_velocity = 10.0
params/tangential_accel = 50.0
params/initial_size = 1.0
params/final_size = 0.2
randomness/linear_velocity = 1.0
randomness/spin_velocity = 0.3
randomness/initial_size = 0.3
randomness/final_size = 0.3
randomness/hue_variation = 0.03
color/color = Color( 0.984375, 0.315308, 0.315308, 1 )
color/color_ramp = SubResource( 3 )

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = ExtResource( 4 )
config/pitch_random = -0.2


